syntax = "proto3";
package pb;

option java_multiple_files = true;
option java_package = "io.textile.buckets_grpc";
option java_outer_classname = "TextileBuckets";
option objc_class_prefix = "TXTL_BUCKETS";

message BucketRoot {
    string name = 1;
    string path = 2;
    int64 createdAt = 3;
    int64 updatedAt = 4;
    bool public = 5;
}

message ListBucketPathRequest {
    string path = 1;
}

message ListBucketPathReply {
    Item item = 1;
    BucketRoot root = 2;

    message Item {
        string name = 1;
        string path = 2;
        int64 size = 3;
        bool isDir = 4;
        repeated Item items = 5;
    }
}

message PushBucketPathRequest {
    oneof payload {
        Header header = 1;
        bytes chunk = 2;
    }

    message Header {
        string path = 1;
    }
}

message PushBucketPathReply {
    oneof payload {
        Event event = 1;
        string error = 2;
    }

    message Event {
        string name = 1;
        string path = 2;
        int64 bytes = 3;
        string size = 4;
        BucketRoot root = 5;
    }
}

message PullBucketPathRequest {
    string path = 1;
}

message PullBucketPathReply {
    bytes chunk = 1;
}

message RemoveBucketPathRequest {
    string path = 1;
}

message RemoveBucketPathReply {}

service API {
    rpc ListBucketPath (ListBucketPathRequest) returns (ListBucketPathReply) {}
    rpc PushBucketPath (stream PushBucketPathRequest) returns (stream PushBucketPathReply) {}
    rpc PullBucketPath (PullBucketPathRequest) returns (stream PullBucketPathReply) {}
    rpc RemoveBucketPath (RemoveBucketPathRequest) returns (RemoveBucketPathReply) {}
}
